test_programs/compile_failure/depend_on_bin/src/main.nr
use dep::bin_dep;

fn main(x : field) {
    assert(x == 1);
}
